[package]
name = "trie64-rs"
version = "0.1.0"
authors = ["TechPizza", "Sho Nakatani <lay.sakura@gmail.com>", "Shane Celis <shane.celis@gmail.com>"]
description = "Memory-efficient trie (prefix tree) based on LOUDS"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TechPizzaDev/trie-rs"
homepage = "https://github.com/TechPizzaDev/trie-rs"
keywords = ["trie", "louds", "succinct"] # up to 5 keywords, each keyword should have <= 20 chars
categories = ["compression", "data-structures"]
edition = "2021"

[lib]
name = "trie"

[dependencies]
louds64-rs = { version = "0.2", git = "https://github.com/TechPizzaDev/louds-rs.git" }
fid64-rs = { version = "0.1", git = "https://github.com/TechPizzaDev/fid-rs.git" }

mem_dbg = { version = "0.2", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
lazy_static = "1.5"
version-sync = "0.9"

[[bench]]
name = "bench"
harness = false

[features]
serde = ["louds64-rs/serde", "fid64-rs/serde", "dep:serde"]
mem_dbg = ["louds64-rs/mem_dbg", "fid64-rs/mem_dbg", "dep:mem_dbg"]

default = ["serde", "mem_dbg"]